# KernelGate

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
backend/: main.py
config/: runtime_policy.json
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  INTERVIEW_NOTES.md  PROJECT_STATUS.md  TESTING_CHECKLIST.md
include/: AuditStore.hpp  Correlator.hpp  Event.hpp  FileTelemetry.hpp  Incident.hpp  Policy.hpp  ProcEnricher.hpp  RiskEvaluator.hpp  RunContext.hpp  UemClient.hpp
sample_events/: suspicious_chain.json
scripts/: ebpf_exec_monitor.bt  final_smoke_test.sh  generate_suspicious_events.sh  run_ebpf_exec_demo.sh  run_phase5_demo.sh  run_uem_upload_demo.sh  trigger_exec_events.sh
src/: AuditStore.cpp  Correlator.cpp  Event.cpp  FileTelemetry.cpp  Incident.cpp  PolicyLoader.cpp  ProcEnricher.cpp  RiskEvaluator.cpp  RunContext.cpp  UemClient.cpp  fanotify_demo.cpp  main.cpp
